--- a/RichDomainModel.Infrastructure/RichDomainModel.Infrastructure.csproj
+++ b/RichDomainModel.Infrastructure/RichDomainModel.Infrastructure.csproj
@@ -14,7 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RichDomainModel.Application\RichDomainModel.Application.csproj" />
     <ProjectReference Include="..\RichDomainModel.Domain.Rich\RichDomainModel.Domain.Rich.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configurations\" />
   </ItemGroup>
 
 </Project>
